--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
   "name": "spray_interactive",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Project to test three.js capabilities",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Eric Macia (ericmacia.com)",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2",
-    "three": "^0.174.0"
-  },
-  "devDependencies": {
-    "vite": "^6.2.0",
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "three": "^0.174.0",
+    "vite": "^6.2.0"
   }
 }
